second changed commit code

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
         style="padding-top: 140px; padding-bottom: 60px; background: linear-gradient(135deg, #0F172A 0%, #1e293b 100%); color: var(--white);">
         <div class="container text-center">
             <h1 style="font-size: 3rem; margin-bottom: 20px;">Who We Are</h1>
-            <p style="max-width: 600px; margin: 0 auto; opacity: 0.9;">Leading consultants for the future of radio and
-                audio streaming.</p>
+            <p style="max-width: 600px; margin: 0 auto; opacity: 0.9;">We are satellite-radioxm. We specialize in fixing
+                radios.</p>
         </div>
     </section>
 
@@ -47,33 +47,23 @@
         <div class="container" style="max-width: 900px;">
             <div style="font-size: 1.1rem; color: var(--text-dark);">
                 <p style="margin-bottom: 24px;">
-                    <strong>Radio Streaming Service</strong> is a team of independent media consultants specialized in
-                    radio broadcasting and digital audio strategy. We partner with stations, networks, and brands to
-                    build robust audio infrastructure and grow audience reach.
-                </p>
-                <p style="margin-bottom: 24px;">
-                    Our mission is to empower broadcasters with the technical expertise and strategic insight needed to
-                    thrive in a digital-first world. From transmitter sites to mobile apps, we cover the entire audio
-                    ecosystem.
-                </p>
-                <p style="margin-bottom: 24px;">
-                    We pride ourselves on delivering objective, vendor-agnostic advice that puts your business goals
-                    first.
+                    <strong>satellite-radioxm</strong> is dedicated to getting your home and car radios working again.
+                    We provide fast, expert online and phone support to solve your audio problems.
                 </p>
 
                 <h2 style="color: var(--primary-color); margin-top: 40px; margin-bottom: 20px;">Why Choose Us?</h2>
                 <ul style="list-style: none;">
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Industry Veterans: Decades of combined experience in broadcast engineering.
+                        Fast Service
                     </li>
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Technical Mastery: Deep knowledge of RF systems, AoIP, and streaming protocols.
+                        Reliable Repairs
                     </li>
                     <li style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
                         <span style="color: var(--secondary-color); font-size: 1.25rem;">✔️</span>
-                        Strategic Growth: Proven track record of increasing station engagement and revenue.
+                        Expert Support
                     </li>
                 </ul>
             </div>
@@ -118,7 +108,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
