--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,8 @@
     <section class="section-padding"
         style="padding-top: 140px; padding-bottom: 60px; background: var(--background-white);">
         <div class="container text-center">
-            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Contact Us</h1>
-            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Ready to elevate your radio station? Get in
-                touch with our experts today.</p>
+            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Contact for Repair</h1>
+            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Need a fix? Contact us today.</p>
         </div>
     </section>
 
@@ -61,7 +60,7 @@
                     <div style="margin-bottom: 30px;">
                         <h3 style="font-size: 1.2rem; margin-bottom: 8px;">Mailing Address</h3>
                         <p class="text-light">
-                            ADDOSYS TECHNOLOGIES PRIVATE LIMITED<br>
+                            <br>
                             123 Dummy Street<br>
                             Cityville, ST 12345
                         </p>
@@ -88,10 +87,9 @@
                         <div class="form-group">
                             <label for="subject">Subject</label>
                             <select id="subject" name="subject">
-                                <option value="Consultation">Consultation Request</option>
-                                <option value="Audit">Technical Audit</option>
-                                <option value="Infrastructure">Infrastructure Planning</option>
-                                <option value="Other">General Inquiry</option>
+                                <option value="Repair">Repair Request</option>
+                                <option value="Support">Support</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -145,7 +143,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
