--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radio Streaming Consultants | Strategic & Technical Solutions</title>
+    <title>Reliable Radio Repairs | Home & Car</title>
     <meta name="description"
-        content="Expert radio consultancy services. We provide strategic planning, technical audits, and digital transformation for radio stations and streaming platforms.">
+        content="At satellite-radioxm, we fix your home and car radios quickly with expert online support and phone help.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,20 +35,19 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Expert Radio <span class="text-primary">Consultancy</span><br>Strategic Solutions</h1>
-            <p>We provide expert strategic and technical consulting for radio stations, streaming platforms, and media
-                enterprises.</p>
+            <h1>Reliable Radio <span class="text-primary">Repairs</span></h1>
+            <p>At satellite-radioxm, we fix your home and car radios quickly with expert online support and phone help.
+            </p>
             <div class="hero-cta">
-                <a href="contact.html" class="btn btn-primary">Request Consultation</a>
-                <a href="services.html" class="btn btn-outline">Our Expertise</a>
+                <a href="contact.html" class="btn btn-primary">Get Help Now</a>
             </div>
 
             <div
                 style="margin-top: 60px; display: flex; gap: 40px; justify-content: center; flex-wrap: wrap; opacity: 0.7;">
                 <!-- Credentials -->
-                <span>✔️ Expert Consultants</span>
-                <span>✔️ Strategic Planning</span>
-                <span>✔️ Technical Audits</span>
+                <span>✔️ Quick Fixes</span>
+                <span>✔️ Online Support</span>
+                <span>✔️ Phone Help</span>
             </div>
         </div>
     </section>
@@ -57,39 +56,29 @@
     <section class="section-padding" style="background: var(--white);">
         <div class="container">
             <div class="text-center" style="max-width: 700px; margin: 0 auto 60px;">
-                <h2 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 16px;">Our Expertise
+                <h2 style="font-size: 2.5rem; color: var(--primary-color); margin-bottom: 16px;">Our Services
                 </h2>
-                <p class="text-light">Professional guidance for modern radio and audio streaming businesses.</p>
+                <p class="text-light">Simple and effective repair services.</p>
             </div>
 
             <div class="features-grid">
                 <!-- Feature 1 -->
                 <div class="feature-card">
-                    <div class="icon-box">📡</div>
-                    <h3>Network Planning</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Comprehensive coverage
-                        analysis, hardware selection, and infrastructure planning for broadcast networks.</p>
-                    <a href="services.html" style="color: var(--secondary-color); font-weight: 600;">Learn more
+                    <div class="icon-box">🚗</div>
+                    <h3>Car Radio Repair</h3>
+                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Quick fixes for your
+                        vehicle's audio system.</p>
+                    <a href="contact.html" style="color: var(--secondary-color); font-weight: 600;">Get Support
                         &rarr;</a>
                 </div>
 
                 <!-- Feature 2 -->
                 <div class="feature-card">
-                    <div class="icon-box">🎙️</div>
-                    <h3>Studio Setup</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">End-to-end design and
-                        consultation for professional broadcast studios and podcasting environments.</p>
-                    <a href="services.html" style="color: var(--secondary-color); font-weight: 600;">Learn more
-                        &rarr;</a>
-                </div>
-
-                <!-- Feature 3 -->
-                <div class="feature-card">
-                    <div class="icon-box">🔧</div>
-                    <h3>Technical Audits</h3>
-                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Deep-dive assessment of
-                        your current transmission chain, audio processing, and digital delivery systems.</p>
-                    <a href="contact.html" style="color: var(--secondary-color); font-weight: 600;">Request Audit
+                    <div class="icon-box">🏠</div>
+                    <h3>Home Radio Repair</h3>
+                    <p style="color: var(--text-light); margin-top: 12px; margin-bottom: 24px;">Expert support for your
+                        home audio devices.</p>
+                    <a href="contact.html" style="color: var(--secondary-color); font-weight: 600;">Get Support
                         &rarr;</a>
                 </div>
             </div>
@@ -99,10 +88,10 @@
     <!-- Call to Action Band -->
     <section class="section-padding" style="background: var(--primary-color); color: var(--white); text-align: center;">
         <div class="container">
-            <h2 style="font-size: 2.5rem; margin-bottom: 24px;">Transform Your Station</h2>
-            <p style="max-width: 600px; margin: 0 auto 40px; color: #94A3B8;">Leverage our decades of industry
-                experience to optimize your operations and reach more listeners.</p>
-            <a href="contact.html" class="btn btn-primary" style="background: var(--accent-color);">Start consulting</a>
+            <h2 style="font-size: 2.5rem; margin-bottom: 24px;">Need Help?</h2>
+            <p style="max-width: 600px; margin: 0 auto 40px; color: #94A3B8;">We are here to fix your radio problems.
+            </p>
+            <a href="contact.html" class="btn btn-primary" style="background: var(--accent-color);">Contact Us</a>
         </div>
     </section>
 
@@ -144,7 +133,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
