--- a/services.html
+++ b/services.html
@@ -36,9 +36,8 @@
     <section class="section-padding"
         style="padding-top: 140px; padding-bottom: 60px; background: var(--background-white);">
         <div class="container text-center">
-            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Our Consultancy Services</h1>
-            <p class="text-light" style="max-width: 600px; margin: 0 auto;">Comprehensive strategic and technical
-                guidance for radio broadcasters and audio platforms.</p>
+            <h1 style="font-size: 3rem; color: var(--primary-color); margin-bottom: 20px;">Our Services</h1>
+            <p class="text-light" style="max-width: 600px; margin: 0 auto;">We fix radios. That's what we do.</p>
         </div>
     </section>
 
@@ -49,76 +48,21 @@
 
                 <!-- Service 1 -->
                 <div class="feature-card">
-                    <div class="icon-box">📡</div>
-                    <h3>Radio Network Planning</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Strategic coverage analysis and infrastructure
-                        rollout planning for terrestrial and digital networks.</p>
-                    <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Coverage Maps & Propagations</li>
-                        <li style="margin-bottom: 8px;">✔️ Hardware Selection</li>
-                        <li>✔️ Site Acquisition Strategy</li>
-                    </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get
-                        Advice</a>
+                    <div class="icon-box">🚗</div>
+                    <h3>Car Radio Repair</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">We troubleshoot and fix car radio issues quickly.
+                    </p>
+                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get Help</a>
                 </div>
 
                 <!-- Service 2 -->
                 <div class="feature-card">
-                    <div class="icon-box">📜</div>
-                    <h3>Regulatory Compliance</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Navigating the complex landscape of broadcast
-                        licensing and music royalties.</p>
-                    <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Licensing Applications</li>
-                        <li style="margin-bottom: 8px;">✔️ Royalty Management</li>
-                        <li>✔️ FCC/Regulatory Filings</li>
-                    </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Contact
-                        Us</a>
+                    <div class="icon-box">🏠</div>
+                    <h3>Home Radio Repair</h3>
+                    <p class="text-light" style="margin-bottom: 16px;">Expert repair services for your home audio
+                        equipment.</p>
+                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get Help</a>
                 </div>
-
-                <!-- Service 3 -->
-                <div class="feature-card">
-                    <div class="icon-box">💻</div>
-                    <h3>Digital Streaming Strategy</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Maximize your audience reach with a robust online
-                        streaming and podcasting strategy.</p>
-                    <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ App Development Consulting</li>
-                        <li style="margin-bottom: 8px;">✔️ Server Architecture</li>
-                        <li>✔️ Monetization Strategy</li>
-                    </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Get
-                        Support</a>
-                </div>
-
-                <!-- Service 4 -->
-                <div class="feature-card">
-                    <div class="icon-box">🔧</div>
-                    <h3>Technical Infrastructure Audit</h3>
-                    <p class="text-light" style="margin-bottom: 16px;">Identify bottlenecks and points of failure in
-                        your current transmission capability.</p>
-                    <ul style="list-style: none; margin-bottom: 24px; color: var(--text-dark);">
-                        <li style="margin-bottom: 8px;">✔️ Signal Quality Analysis</li>
-                        <li style="margin-bottom: 8px;">✔️ Equipment Lifecycle Checks</li>
-                        <li>✔️ Redundancy Planning</li>
-                    </ul>
-                    <a href="contact.html" class="btn btn-primary" style="width: 100%; text-align: center;">Schedule
-                        Audit</a>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- Support Section -->
-    <section class="section-padding" style="background: var(--background-white);">
-        <div class="container">
-            <div class="text-center" style="max-width: 700px; margin: 0 auto;">
-                <h2 style="color: var(--primary-color); margin-bottom: 20px;">Questions?</h2>
-                <p style="margin-bottom: 30px;" class="text-light">Not sure what you need? Reach out to our team for a
-                    personalized consultation.</p>
-                <a href="contact.html" class="btn btn-outline">Contact Support</a>
             </div>
         </div>
     </section>
@@ -161,7 +105,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
