--- a/privacy.html
+++ b/privacy.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
