--- a/terms.html
+++ b/terms.html
@@ -55,8 +55,7 @@
             <p>These terms and conditions are governed by and construed in accordance with the laws of the State of New
                 York.</p>
 
-            <h2 style="margin-top: 30px; margin-bottom: 16px;">5. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at info@radiostreamingservice.com.</p>
+            <!-- Disclaimer Removed -->
         </div>
     </section>
 
@@ -98,7 +97,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 ADDOSYS TECHNOLOGIES PRIVATE LIMITED. All rights reserved.</p>
+                <p>&copy; 2024 satellite-radioxm. All rights reserved.</p>
             </div>
         </div>
     </footer>
