--- a/contact.html
+++ b/contact.html
@@ -44,45 +44,19 @@
     <!-- Contact Content -->
     <section class="section-padding">
         <div class="container">
-            <div class="grid-contact"
-                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 60px;">
+            <div class="grid-contact" style="display: block;">
 
-                <!-- Contact Info -->
-                <div>
-                    <h2 style="color: var(--primary-color); margin-bottom: 30px;">Get in Touch</h2>
-
-                    <div style="margin-bottom: 30px;">
-                        <h3 style="font-size: 1.2rem; margin-bottom: 8px;">Support</h3>
-                        <p class="text-light">contact@example.com</p>
-                        <p class="text-light">(555) 000-0000</p>
-                    </div>
-
-                    <div style="margin-bottom: 30px;">
-                        <h3 style="font-size: 1.2rem; margin-bottom: 8px;">Mailing Address</h3>
-                        <p class="text-light">
-                            <br>
-                            123 Dummy Street<br>
-                            Cityville, ST 12345
-                        </p>
-                    </div>
-
-                    <div style="background: #EFF6FF; padding: 24px; border-radius: 12px;">
-                        <h4 style="color: var(--secondary-color); margin-bottom: 12px;">Support Hours</h4>
-                        <p class="text-light">Monday - Friday: 9:00 AM - 6:00 PM EST</p>
-                        <p class="text-light">Saturday: 10:00 AM - 2:00 PM EST</p>
-                    </div>
-                </div>
-
+                <!-- Contact Info REMOVED -->
                 <!-- Contact Form -->
-                <div class="form-container">
+                <div class="form-container" style="max-width: 600px; margin: 0 auto;">
                     <form id="contactForm" action="/contact-submit" method="POST">
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" name="name" required placeholder="John Doe">
                         </div>
                         <div class="form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" id="email" name="email" required placeholder="john@example.com">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" name="phone" placeholder="(801) 981-9648">
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
@@ -137,8 +111,7 @@
                 <div>
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><span style="color:#94A3B8;">Email:</span> contact@example.com</li>
-                        <li><span style="color:#94A3B8;">Phone:</span> (555) 000-0000</li>
+                        <li><span style="color:#94A3B8;">Phone:</span> (801) 981-9648</li>
                     </ul>
                 </div>
             </div>
