--- a/privacy.html
+++ b/privacy.html
@@ -57,8 +57,7 @@
             <!-- Disclaimer Removed -->
 
             <h2 style="margin-top: 30px; margin-bottom: 16px;">5. Contact Us</h2>
-            <p>If you have any questions about our privacy policy, please contact us at info@radiostreamingservice.com.
-            </p>
+            <p>If you have any questions about our privacy policy, please contact us.</p>
         </div>
     </section>
 
@@ -94,8 +93,7 @@
                 <div>
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><span style="color:#94A3B8;">Email:</span> contact@example.com</li>
-                        <li><span style="color:#94A3B8;">Phone:</span> (555) 000-0000</li>
+                        <li><span style="color:#94A3B8;">Phone:</span> (801) 981-9648</li>
                     </ul>
                 </div>
             </div>
