changed contact nuber by append 1

--- a/privacy.html
+++ b/privacy.html
@@ -93,7 +93,7 @@
                 <div>
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><span style="color:#94A3B8;">Phone:</span> (801) 981-9648</li>
+                        <li><span style="color:#94A3B8;">Phone:</span> +1 (801) 981-9648</li>
                     </ul>
                 </div>
             </div>
