--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone" placeholder="(801) 981-9648">
+                            <input type="tel" id="phone" name="phone" placeholder="+1 (801) 981-9648">
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
@@ -111,7 +111,7 @@
                 <div>
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><span style="color:#94A3B8;">Phone:</span> (801) 981-9648</li>
+                        <li><span style="color:#94A3B8;">Phone:</span> +1 (801) 981-9648</li>
                     </ul>
                 </div>
             </div>
