--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>At satellite-radioxm, we fix your home and car radios quickly with expert online support and phone help.
             </p>
             <div class="hero-cta">
-                <a href="tel:8019819648" class="btn btn-primary">Get Help Now</a>
+                <a href="tel:+18019819648" class="btn btn-primary">Get Help Now</a>
             </div>
 
             <div
@@ -127,7 +127,7 @@
                 <div>
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><span style="color:#94A3B8;">Phone:</span> (801) 981-9648</li>
+                        <li><span style="color:#94A3B8;">Phone:</span> +1 (801) 981-9648</li>
                     </ul>
                 </div>
             </div>
